# kid_event_calendar

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
src/kid_events/: __init__.py  ages.py  aggregator.py  branches.py  cache.py  cli.py  filters.py  geo.py  models.py  textutil.py
src/kid_events/data/: branches.json  translations.json
src/kid_events/sources/: __init__.py  activecommunities.py  base.py  bibliocommons.py  libcal.py  registry.py  sunnyvale_cms.py
src/kid_events/web/: __init__.py  app.py  build.py
src/kid_events/web/static/: app.js  map.js  style.css
src/kid_events/web/templates/: _event_list.html  _event_map.html  _page.html  base.html  index.html  static_index.html
tests/: test_activecommunities.py  test_ages.py  test_aggregator.py  test_bibliocommons.py  test_branches.py  test_build.py  test_cache.py  test_filters.py  test_geo.py  test_libcal.py  test_models.py  test_sunnyvale.py  test_web.py
tests/fixtures/: bibliocommons_sccl.json  libcal_mountainview.ics
