[project]
name = "kid-events"
version = "0.1.0"
description = "Aggregate kid-friendly library events near Mountain View, filterable by child age and driving distance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "icalendar>=6.0",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
# Sunnyvale's library calendar has no feed and is bot-protected, so it requires
# a headless browser to scrape. Optional: `uv sync --extra sunnyvale` then
# `uv run playwright install chromium`.
sunnyvale = ["playwright>=1.40"]

[project.scripts]
kid-events = "kid_events.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "respx>=0.21",
    "types-python-dateutil>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kid_events"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Query() defaults are the idiomatic way to declare query params.
"src/kid_events/web/app.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["icalendar.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
